[project]
name = "nuon-ext-policies"
version = "0.1.0"
description = "Validate and analyze Nuon permission policies and boundaries"
readme = "README.md"
authors = [
    { name = "fidiego", email = "sayheytofred@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "rich",
    "tomli",
    "click",
]

[project.scripts]
nuon-ext-policies = "nuon_ext_policies.cli:main"

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
